<resources>
    <string name="app_name">Activity 5.0</string>
    <string name="tvTitulo">Gestión de Usuario</string>
    <string name="etDocumento">Ingrese el Documento</string>
    <string name="etUsuario">Ingrese el Usuario</string>
    <string name="etNombres">Ingrese los Nombres</string>
    <string name="etApellidos">Ingrese el Apellidos</string>
    <string name="etContrasena">Ingrese la Contraseña</string>
    <string name="btnRegister">Guardar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnListar">Listar</string>
    <string name="btnBorrar">Borrar</string>
</resources>